Update repositoryID in artifacthub-repo.yml
Signed-off-by: startcodexsas <130619463+startcodexsas@users.noreply.github.com>

--- a/artifacthub-repo.yml
+++ b/artifacthub-repo.yml
@@ -1,6 +1,6 @@
 # Artifact Hub repository metadata
 # https://artifacthub.io/docs/topics/repositories/
-repositoryID: ""
+repositoryID: 16e4cf59-fbc0-470b-a4fe-bb1f892d7930
 owners:
   - name: Start Codex
     email: cloud@startcodex.com
