feat: Introduce explicit `storageClass` option for OpenLDAP persistence and add a comprehensive production values example.

--- a/values.yaml
+++ b/values.yaml
@@ -79,7 +79,8 @@ openldap:
   # Persistence
   persistence:
     enabled: true
-    size: 1Gi
+    # Storage class (overrides global.storageClass)
+    storageClass: ""
     # Separate PVCs for data and config
     data:
       size: 1Gi
